# jornada_workshop01

./: .gitignore  EN-README.md  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt  site_packages.py
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
data/input/: absenteeism_data_0.xlsx  absenteeism_data_3.xlsx
data/output/: concatenated_data.csv  concatenated_data.parquet  files_loaded.xlsx
docs/logs/: log_20250523_094856.txt  log_20250524_145803.txt  log_20250524_150324.txt  log_20250524_150441.txt  log_20250524_150608.txt  log_20250524_151329.txt  log_20250524_151543.txt  log_20250524_151726.txt  log_20250524_152102.txt  log_20250524_152409.txt  log_20250524_153700.txt
tests/: test_extract.py  test_load.py  test_pipeline.py  test_transform.py
