[project]
name = "workshop"
version = "0.1.0"
description = "Projeto desenvolvido durante workshop da Jornada de Dados"
authors = [
    {name = "André Matiello C. Caramanti",email = "matiello.andre@hotmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython (>=9.2.0,<10.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ignr (>=2.2,<3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
